--- a/app/views/admin/gifts/index.html.haml
+++ b/app/views/admin/gifts/index.html.haml
@@ -6,6 +6,7 @@
   .col-sm-12
     = link_to 'Add a Gift', new_admin_gift_path, class: 'btn btn-primary'
     = link_to 'Unintended Single Product Gifts', admin_faux_single_product_gifts_path, class: 'btn btn-primary'
+    = link_to 'Export Gift Tags', admin_gift_tag_exports_path, class: 'btn btn-primary', method: :create
 
 .row.admin__search
   .col-sm-12
