added gift tagging and tag searching to admin

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -21,3 +21,8 @@
 .text-align-right {
   text-align: right;
 }
+
+// julie can get mad at me for putting this here (dpr)
+.label-inverse {
+  color: #f0f0f0;
+}
