--- a/app/views/admin/gifts/index.html.haml
+++ b/app/views/admin/gifts/index.html.haml
@@ -16,6 +16,10 @@
         .col-sm-4
           = form.search_field :keyword, placeholder: 'Title or SKU', class: 'form-control', style: 'min-width: 300px;'
       .form-group
+        %label.col-sm-2.control-label Tags
+        .col-sm-4
+          = form.search_field :tags, placeholder: 'Tags', class: 'form-control', style: 'min-width: 300px;'
+      .form-group
         %label.col-sm-2.control-label Category
         .col-sm-4
           = form.collection_select :product_category_id, ProductCategory.categories, :id, :name, {prompt: 'Category'}, class: 'form-control', data: {behavior: 'product-category-input'}
@@ -43,33 +47,28 @@
     %table.table
       %thead
         %tr
-          %th
-          %th Title & Description
-          %th Categories
-          %th Wrapt SKU
-          %th.text-right Selling price
-          %th.text-right Availability
+          %th Gift
           %th
 
       %tbody
         - @gifts.each do |gift|
           %tr
-            %td.admin-index-table--image-cell
-              - if gift.primary_gift_image.present?
-                = image_tag gift.primary_gift_image.image_url(:small), class: 'admin-index-table--image'
             %td
               %h4.admin-index-table--item-title= gift.title
+              %p
+                = gift.wrapt_sku
+                (#{number_to_currency gift.selling_price})
+              - if gift.primary_gift_image.present?
+                = image_tag gift.primary_gift_image.image_url(:small), class: 'admin-index-table--image'
               .admin-index-table--item-description= gift.description
-            %td
               - if gift.product_category.present?
                 %span.label.label-default= gift.product_category&.name
               - if gift.product_subcategory.present?
                 %span.label.label-default= gift.product_subcategory&.name
               - if gift.featured?
-                %span.label.label-default featured
-            %td= gift.wrapt_sku
-            %td.text-right= number_to_currency gift.selling_price
-            %td.text-right= gift.availability_string
+                %span.label.label-default featured                
+              - gift.tags.each do |tag|
+                %span.label.label-primary.label-inverse= tag.name
             %td.admin-index-table--buttons-cell(style="line-height: 24px; text-align: left;")
               = link_to 'View', [:admin, gift], class: 'btn btn-default btn-xs'
               = link_to 'Preview', admin_gift_preview_modal_path(gift), class: 'btn btn-default btn-xs', data: {loads_in_pjax_modal: true}
