add support for survey in test mode

--- a/app/views/admin/surveys/_survey.html.haml
+++ b/app/views/admin/surveys/_survey.html.haml
@@ -6,3 +6,5 @@
   = link_to survey.title, admin_survey_path(survey)
 - if survey.published?
   %span.label.label-default Published
+- elsif survey.test_mode?
+  %span.label.label-default Test Mode
