--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -12,6 +12,12 @@
           %p In MVP1a, when we invite people for testing, they will be taken to a special landing page.
           %p
             = link_to 'Tester Landing Page: Start a New Quiz', new_profile_path
+            - test_surveys = Survey.where(test_mode: true)
+            - if test_surveys.any?
+              %p Select a quiz that is currently in test mode:
+              %ul
+                - test_surveys.each do |test_survey|
+                  %li= link_to test_survey.title, new_profile_path(survey_id: test_survey.id)
         - else
           .sqr-progress.sqr-progress--one-question-only
           = simple_form_for @invitation_request, html: {class: 'sqr-form new-invite-request'} do |form|
