gift basket link logic adjustments, copy edits

--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -54,9 +54,9 @@ a:active .navbar-static-top__icon-circle {
 }
 .gr-carousel__image-nav--caret-left,
 .gr-carousel__image-nav--caret-right {
-  fill: lighten($gray-006, 10);
-  width: 10px;
-  height: 10px;
+  fill: #fff;
+  width: 14px;
+  height: 14px;
 }
 .modal__icon-close {
   width: 22px;
