--- a/app/views/static_pages/science_of_gifting.html.haml
+++ b/app/views/static_pages/science_of_gifting.html.haml
@@ -1,11 +1,13 @@
 .container
   .row
     .col-xs-10.col-xs-offset-1
-      %h1.about-page__header Science of Gifting
+      %h1.about-page__header 
+        The Science of Gifting
+        %br
+        %span.about-page__header__second-line
+          (why choosing the right gift is hard)
       %p.about-page__tagline 
         WRAPT 
-        %sup.trademark
-          &#8482;
         helps people give, connect and understand each other better. 
 
       -# .row.about-page__subsection.with-image.image-left
@@ -13,7 +15,7 @@
       .row.about-page__subsection
         .col-xs-12
           .about-page__subsection-text
-            %p 
+            %p.text-center
               We buy gifts because we care. But we often worry we will choose the wrong gift, disappointing the very person we were hoping to delight.
               %sup
                 =succeed "," do
@@ -41,14 +43,10 @@
                 We are bad at predicting what types of gifts people will appreciate the most
                 %sup
                   =link_to "7", "#citation-07"
-              %li
-                We tend to give material possessions, even though experience gifts make us feel more connected
-                %sup
-                  =link_to "8", "#citation-08"
             %p
               The wrong gift can tear us apart rather than bring us together. 
               %sup
-                =link_to "9", "#citation-09"
+                =link_to "8", "#citation-08"
               So how do we make gift giving the pleasurable and delighting experience it is meant to be?
 
 
@@ -58,24 +56,20 @@
               "The most important thing in the exchanging of gifts is it shows that you really know the person well, and you really care about them," said Ryan Howell, a psychologist at San Francisco State University and co-founder of 
               =succeed "." do
                 =link_to "beyondthepurchase.org", "http://beyondthepurchase.org", target: "_blank"
-              That generally means tailoring the gift to the recipient. For example, Howell told Live Science, research finds that people who want to buy 
+              %strong
+                That generally means tailoring the gift to the recipient. 
+              For example, Howell told Live Science, research finds that people who want to buy 
               =link_to "meaningful gifts", "http://www.livescience.com/27746-how-to-get-happy-seek-a-meaningful-life.html", target: "_blank" 
               don't buy the same gift for two of their friends&#8212;even if those friends don't know each other, would never compare the gifts, and would both enjoy the same item.
-            %h4 Donate in their name
+            %h4 WRAPT is a platform for giving gifts from the heart.
             %p
-              Giving gifts to friends or to charity is 
-              =link_to "linked to happiness", "http://www.livescience.com/2376-key-happiness-give-money.html", target: "_blank"
-              =succeed "." do
-                %sup
-                  =link_to "10", "#citation-10"
-              Research suggests that happier people give more to charity, and that giving more makes people happier,
-              =succeed "," do
-                =link_to "creating a positive feedback loop [pdf]", "http://www.hbs.edu/faculty/Publication%20Files/10-012.pdf", target: "_blank"
-              according to a 2009 paper from Harvard Business School. Moreover, charity-related happiness is highest when people give in a way that fosters social connection. 
-              =link_to "A 2013 study published", "http://www.eurekalert.org/pub_releases/2013-08/ip-sgm082013.php"
-              in the 
-              %em International Journal of Happiness and Development
-              found that people felt happier after giving in a personalized manner, via a friend or relative, than after giving an anonymous donation. So, try giving to the less fortunate in someone's name this holiday season&#8212;it might give you both a holiday glow.
+              Because we know that your giftee is one of a kind, our Wrapt quiz helps you easily identify what makes her tick. WRAPT’s unique matching intelligence pins down her Personality, Passions, and Purpose to recommend the perfect gift&#8212;a gift that is about more than just her interests, a gift that brings out who she is and what she cares about in this world.
+            %p
+              In addition,  Wrapt gifts are artisanal&#8212;of the hand-made, fair trade, and sustainable variety, making recipients feel special. These gifts also support artisan communities around the globe, offering stories of positive social change that add additional value to your to gift recipient.
+
+
+
+            
             %h4 Give handmade goods
             %p
               New and store-bought is not always best. A 
@@ -83,40 +77,12 @@
               in the Journal of Marketing found that people prefer buying homemade items for loved ones and were even willing to pay as much as 17 percent more for homemade things versus mass-produced items. The findings suggest that people feel that homemade items show more love, and love is what they want to express to the gift recipient
               =succeed "." do
                 %sup
-                  =link_to "11", "#citation-11"
-            %h4 Give experiences, not things
-            %p
-              If there's a golden rule of gifts, though, it's this: Give experiences rather than items. People who receive experiential gifts, such as concert tickets or a zoo membership, feel more 
-              =link_to "connected to the gift giver [pdf]", "https://www.rotman.utoronto.ca/-/media/Files/Programs-and-Areas/Marketing/papers/ChanMogilner2013.pdf", target: "_blank"
-              than people who received material items, according to researchers from the Wharton School at the University of Pennsylvania. However, 
-              =link_to "a recent paper [pdf]", "http://apps.olin.wustl.edu/faculty/goodman/Giving%20Happiness.pdf", target: "_blank"
-              by researchers at Washington University in St. Louis and Seoul National University found that people who expect a material gift who get an experiential one instead report being satisfied anyway. In contrast, those who expect an experiential gift but get an item instead are disappointed. "If gifts are about expressing and forging love, one of the best ways to do that is with your own time," Pugh said. "That will always be a really powerful gift."
-            %h4
-              WRAPT 
-              %sup.trademark
-                &#8482;
-              is a platform for giving gifts from the heart.
-            %p
-              Because we know that your giftee is one of a kind, our Wrapt
-              %sup.trademark
-                &#8482;
-              quiz helps you easily identify what makes her tick. WRAPT
-              =succeed "’" do
-                %sup.trademark
-                  &#8482;
-              s unique matching intelligence pins down her Personality, Passions, and Purpose to recommend the perfect gift&#8212;a gift that is about more than just her interests, a gift that brings out who she is and what she cares about in this world. All Wrapt
-              %sup.trademark
-                &#8482;
-              gifts are artisanal&#8212;of the hand-made, fair trade, and sustainable variety making them feel special and meaningful. These gifts also support artisan and artisan communities around the globe, offering stories of positive social change to share with your gift recipient. Wrapt
-              %sup.trademark
-                &#8482;
-              gifts, beyond artisanal items include experiences and funds. Experiences take our gifts to the next level.  For example, the hand woven picnic basket can be used to create a memorable afternoon or evening, with a meal, set in a favorite place, to be remembered for years to come. 
-            %p
-              Our Funds section is a unique way to take one of her bucket list items, causes or projects, and invite other friends and family to go in on making one of her dreams come true. You name the gift, set the price and we collect the funds, create her personal card, and wrapt, with love for a group gift experience she is not likely to forget.
+                  =link_to "9", "#citation-9"
+            
       .row.about-page__subsection
         .col-xs-12
           .citations
-            %h4 Footnotes
+            %h4.mt0 Footnotes
             %p.citation.citation-footnote#citation-01
               %sup 1
               (
@@ -154,25 +120,15 @@
               %sup 8
               (
               =succeed ")" do
-                =link_to "Chan and Mogilner, 2013 [pdf]", "https://www.rotman.utoronto.ca/-/media/Files/Programs-and-Areas/Marketing/papers/ChanMogilner2013.pdf", target: "_blank"
-            %p.citation.citation-footnote#citation-09
-              %sup 9
-              (
-              =succeed ")" do
                 =link_to "Ruth, Otnes and Brunel, 1999 [pdf]", "https://www.researchgate.net/profile/Julie_Ruth/publication/24099017_Gift_Receipt_and_the_Reformulation_of_Interpersonal_Relationships/links/02e7e51e934068390c000000.pdf", target: "_blank"
-            %p.citation.citation-footnote#citation-10
+            
+            %p.citation.citation-footnote#citation-9
               %sup
-                10
-              (
-              =succeed ")" do
-                =link_to "Dunn and Norton, 2013", "https://www.amazon.com/Happy-Money-Science-Happier-Spending/dp/1451665075", target: "_blank"
-            %p.citation.citation-footnote#citation-11
-              %sup
-                11
+                9
               (
               =succeed ")" do
                 =link_to "Fuchs, Schreier, & van Osselaer, 2015 [pdf]", "https://www.researchgate.net/profile/Stijn_Van_Osselaer/publication/273529358_The_Handmade_Effect_What%27s_Love_Got_to_Do_with_It/links/55cb517208aeb975674c5f58.pdf", target: "_blank"
-            %h4 Bibliography
+            %h4.mt2 Bibliography
             %p.citation.citation--bibliography
               Sirgy, M. J. (1982). Self-concept in consumer behavior: A critical review. <em>Journal of consumer research</em>, 9(3), 287-300.
               =link_to "http://s3.amazonaws.com/academia.edu.documents/6454659/sirgy_jcr-1982_.pdf?AWSAccessKeyId=AKIAJ56TQJRTWSMTNPEA&Expires=1481581321&Signature=b0zTmMtYCRnd8g09BXNMWYGqI90%3D&response-content-disposition=inline%3B%20filename%3DSelf-concept_in_consumer_behavior_A_crit.pdf", "http://s3.amazonaws.com/academia.edu.documents/6454659/sirgy_jcr-1982_.pdf?AWSAccessKeyId=AKIAJ56TQJRTWSMTNPEA&Expires=1481581321&Signature=b0zTmMtYCRnd8g09BXNMWYGqI90%3D&response-content-disposition=inline%3B%20filename%3DSelf-concept_in_consumer_behavior_A_crit.pdf", target: "_blank"
