home page animations take 1

--- a/app/views/home/_how_wrapt_works.haml
+++ b/app/views/home/_how_wrapt_works.haml
@@ -1,29 +1,18 @@
 .new-quiz__about
   .new-quiz__about-intro-wrapper
     .new-quiz__about-intro-content
-      %h2.light.mb1 
-        How Wrapt
-        %sup.trademark
-          &#8482;
-        Works
-      %p 
-        Wrapt 
-        %sup.trademark
-          &#8482;
-        is a fun and easy way to discover the perfect gifts she will love, based on who she actually is.
+      %h2.light.mb1
+        How Wrapt Works
 
-  .new-quiz__about-step.step-1.left
-    %h4.light Tell Us About Her
-    %p Help us understand what makers her ‘tick’ by answering a few questions about her personality, passions, and purpose.
+  .row
+    .col-sm-4
+      %h4.light Give us a few basics.
+      %p Answer some optional questions about their personality, passions and purpose–it will help us match gifts to them better!
 
-  .new-quiz__about-step.step-2.right
-    %h4.light We Suggest Gifts She’ll Love
-    %p Based on your answers, we then match her with gifts from our curated collection of artisanal items, memorable experiences, or practical funds.
+    .col-sm-4
+      %h4.light We will recommend unique, artisanal items, lovingly made with stories that inspire.
+      %p We’ll share stories about our artisans and impact from each purchase.
 
-  .new-quiz__about-step.step-3.left
-    %h4.light 
-      Wrapt 
-      %sup.trademark
-        &#8482;
-      &amp; Delivered
-    %p She receives a gift she loves, wrapt and delivered, and you will gain a personal  'gift whisperer' that can help you surprise her with meaningful gifts for every occasion.
+    .col-sm-4
+      %h4.light We send to your gift recipient, Wrapt and delivered, with love.
+      %p Wrapt is ready for your next gift occasion with your profiles saved with their interests, passions and favorites.
