--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -16,6 +16,7 @@ $gray-008: rgb(77, 76, 77); // #4d4c4d
 $gray-009: rgb(68, 68, 68); // #444
 $gray-010: rgb(51, 51, 51); // #333
 $gray-011: rgb(250, 251, 252); // #FAFBFC
+$gray-012: rgb(161, 172, 178); // #A1ACB2
 $black: #000;
 
 $blue-001: rgb(145, 166, 205); // #91A6CD lightest, logo border (used for 90a5cd)
@@ -94,10 +95,10 @@ $font-size-base:          16px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
 
-$font-size-h1:            44px !default; // 
-$font-size-h2:            33px !default; // 
-$font-size-h3:            28px !default; // 
-$font-size-h4:            18px !default; // 
+$font-size-h1:            44px !default; //
+$font-size-h2:            33px !default; //
+$font-size-h3:            28px !default; //
+$font-size-h4:            18px !default; //
 $font-size-h5:            14px !default;
 $font-size-h6:            ceil(($font-size-base * 0.75)) !default; // ~12px
 
