--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -7,11 +7,8 @@ body.hero-bg .wrapper--full-bleed__bg-03{
   background-repeat: no-repeat;
 }
 
-.hero-overlay {
-  background-color: rgba(0, 0, 0, 0.2);
-  padding: 26px 120px 40px 36px;
-  color: #fff;
-  width: 60%;
+.main-header {
+  text-align: center;
 }
 
 .hero-overlay p {
@@ -210,7 +207,7 @@ body.home,
     padding-right: 24px;
   }
   @media (max-width: 770px) {
-    margin-top: 155px; 
+    margin-top: 155px;
     background-color: $gray-006;
   }
   @media (max-width: 600px) {
@@ -239,4 +236,87 @@ body.home,
 }
 .home {
   margin-bottom: 0;
+}
+
+.home__gift-examples {
+  display: flex;
+  width: 100%;
+  @media (max-width: $screen-xs-max) {
+    flex-direction: column;
+  }
+}
+
+.home__gift-example {
+  position: relative;
+  overflow: hidden;
+}
+
+.home__gift-example img {
+  width: 100%;
+}
+
+.home__bottom-logo {
+  margin-top: 80px;
+  border: solid 2px $blue-001;
+}
+
+.home__gift-example .flyover {
+  height: 0;
+  position: absolute;
+  background-color: $gray-012;
+  width: 100%;
+  height: 33%;
+  transform: translateY(-100%);
+  overflow: hidden;
+  // animation: shrink-to-0-height 0.33s;
+}
+
+.home__gift-example:hover .flyover {
+  display: block;
+  height: 33%;
+  transform: translateY(0);
+  // animation: grow-to-33-height 0.33s;
+}
+
+.home__gift-example .flyover.top {
+  top: 0;
+  transform-origin: top;
+  transform: translateY(-100%);
+  animation: fly-out-to-top 0.33s;
+}
+.home__gift-example:hover .flyover.top {
+  transform: translateY(0);
+  animation: fly-in-from-top 0.33s;
+}
+
+.home__gift-example .flyover.bottom {
+  bottom: 0;
+  opacity: 0.8;
+  transform-origin: bottom;
+  transform: translateY(100%);
+  animation: fly-out-to-bottom 0.33s;
+}
+.home__gift-example:hover .flyover.bottom {
+  transform: translateY(0);
+  animation: fly-in-from-bottom 0.33s;
+}
+
+@keyframes fly-in-from-top {
+  0% { transform: translateY(-100%); }
+  100% { transform: translateY(0); }
+}
+
+@keyframes fly-out-to-top {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-100%); }
+}
+
+@keyframes fly-in-from-bottom {
+  0% { transform: translateY(100%); }
+  100% { transform: translateY(0); }
+}
+
+@keyframes fly-out-to-bottom {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(100%); }
 }
