--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,12 +1,16 @@
 .container
   .row
     .col-xs-12.col-sm-10.col-sm-offset-1
-      .hero-overlay
-        %h2.light
-          Introducting Wrapt,
-          a personalized gift whisperer to help you find gifts for the women in your life.
-        %p.light We use the science of gifting and gratitude to match her personality, passions and purpose, to gifts she will love, no matter the occasion.
-      
+      .main-header
+        %h1
+          Gift Better.
+          %br
+          Gift Wrapt.
+        %p
+          We use the science of gifting to find the best gifts for you,
+          %br
+          while doing a little good in the world
+
       .hero-overrun
         - if current_user&.admin?
           %p In MVP1a, when we invite people for testing, they will be taken to a special landing page.
@@ -24,14 +28,16 @@
             .form-inputs
               = form.input :email, label: 'What is your email address?', required: false
               = form.input :how_found, label: 'How did you hear about us?', as: :radio_buttons, collection: InvitationRequest::HOW_FOUNDS, label_method: :last, value_method: :first, wrapper_html: {class: 'labels-no-bottom-margin'}
-          
+
             .form-actions.pull-right
               = form.submit 'Submit', class: 'btn btn-primary'
             .clearfix
+      %h3.text-center Wrapt is a fun and easy way to find inspired gifts that match who they are, with stories they will love.
       =render 'home/how_wrapt_works'
 
 - content_for :after_wrapper do
-  =render 'home/our_own_collection'
+  = render 'home/after_wrapper'
+
 
 
 
