small tweak to gift table styling in admin

--- a/app/assets/stylesheets/modules/admin/_lists_tables.scss
+++ b/app/assets/stylesheets/modules/admin/_lists_tables.scss
@@ -61,6 +61,7 @@
 .admin-index-table--image {
   max-height: 100px;
   float: left;
+  margin-right: 20px;
 }
 .admin-index-table--buttons-cell {
   min-width: 170px;
