--- a/app/assets/stylesheets/modules/_carousel.scss
+++ b/app/assets/stylesheets/modules/_carousel.scss
@@ -1,4 +1,6 @@
-// contains 
+@import "helpers";
+
+// contains
 //   styles for carousel_js
 
 // basic styles for carousel
@@ -109,10 +111,3 @@ a.wrapt-carousel__nav:hover,
 .wrapt-carousel__nav:active {
   background: none;
 }
-
-
-
-
-
-
-
