--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -1,6 +1,8 @@
 // Styles for Welcoming pages with the full-bleed hero images
 // e.g. Home Page and Quiz Landing page
 
+@import "helpers";
+
 body.hero-bg .wrapper--full-bleed__bg-03{
   background-image: image-url('hero-image');
   background-size: 100vw;
