--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -20,4 +20,4 @@
       =render 'home/how_wrapt_works'
 
 - content_for :after_wrapper do
-  =render 'home/our_own_collection'
+  =render 'home/after_wrapper'
