--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -1,3 +1,5 @@
+@import "helpers";
+
 // fix the footer to the bottom of the page
 html {
   position: relative;
@@ -15,7 +17,11 @@ body.modal-body {
   text-align: center;
   width: 100%;
   margin-bottom: 0;
-  @extend .help;
+  font-size: rem(12);
+  line-height: 1.5;
+  letter-spacing: 1px;
+  margin-bottom: 8px;
+  color: $gray-006;
 }
 .footer__link-item {
   display: inline-block;
