--- a/app/assets/stylesheets/modules/_questions.scss
+++ b/app/assets/stylesheets/modules/_questions.scss
@@ -1,3 +1,5 @@
+@import "helpers";
+
 .sqr-container {
   width: 945px;
   margin: 0 auto;
@@ -162,5 +164,3 @@
   height: 100%;
   background-color: $tan-002;
 }
-
-
