--- a/app/assets/stylesheets/modules/_transitions_animations.scss
+++ b/app/assets/stylesheets/modules/_transitions_animations.scss
@@ -1,7 +1,8 @@
+@import "helpers";
+
 .btn,
 .sqr-previous__link,
 .sqr-option-explanation,
 .gr-carousel__nav {
   transition: all 0.3s ease 0s;
 }
-
