--- a/app/views/home/_after_wrapper.haml
+++ b/app/views/home/_after_wrapper.haml
@@ -1,25 +1,54 @@
+.container
+  .row
+    .col-xs-12.col-sm-10.col-sm-offset-1
+      %h3.text-center Wrapt is a fun and easy way to find inspired gifts that match who they are, with stories they will love.
+  .row
+    .col-xs-12
+      .new-quiz__about
+        .new-quiz__about-intro-wrapper
+          .new-quiz__about-intro-content
+            %h2.light.mb1
+              How Wrapt Works
+
+        .row
+          .col-sm-4.about-step
+            .about-step-number.text-center.light 1
+            %h4.about-step__header Give us a few basics.
+            %p.about-step__description Answer some optional questions about their personality, passions and purpose–it will help us match gifts to them better!
+
+          .col-sm-4.about-step
+            .about-step-number.light 2
+            %h4.about-step__header We will recommend unique, artisanal items, lovingly made with stories that inspire.
+            %p.about-step__description We’ll share stories about our artisans and impact from each purchase.
+
+          .col-sm-4.about-step
+            .about-step-number.light 3
+            %h4.about-step__header We send to your gift recipient, Wrapt and delivered, with love.
+            %p.about-step__description Wrapt is ready for your next gift occasion with your profiles saved with their interests, passions and favorites.
+
+
 .home__gift-examples
   .home__gift-example
     .flyover.top
-      %h2 Impact
+      %h1.home__flyover-header.light Impact
     = image_tag "gift-example__bag.jpg"
     .flyover.bottom
-      %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      %p.home__flyover-description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
   .home__gift-example
     .flyover.top
-      %h2 Impact
+      %h1.home__flyover-header.light Impact
     = image_tag "gift-example__glass.jpg"
     .flyover.bottom
-      %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      %p.home__flyover-description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
   .home__gift-example
     .flyover.top
-      %h2 Impact
+      %h1.home__flyover-header.light Impact
     = image_tag "gift-example__earrings.jpg"
     .flyover.bottom
-      %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      %p.home__flyover-description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 .home__bottom-logo.text-center
   %h3.light Gift Better. Gift Wrapt.
