--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -7,6 +7,9 @@ body.hero-bg .wrapper--full-bleed__bg-03{
   background-image: image-url('hero-image');
   background-size: 100vw;
   background-repeat: no-repeat;
+  // background-color: #CCC;
+  border: none;
+  margin-bottom: 48px
 }
 
 .main-header {
@@ -23,7 +26,7 @@ body.hero-bg .wrapper--full-bleed__bg-03{
   margin-top: 100px;
   background-color: #fff;
   padding: 40px;
-  box-shadow: 0 0 9px 2px rgba(0,0,0,0.05);
+  box-shadow: 0 2px 4px 4px rgba(0, 0, 0, 0.08), 0 2px 12px 12px rgba(0, 0, 0, 0.05)
 }
 
 .invitation_request_email label {
@@ -245,7 +248,6 @@ body.home,
 .home__gift-example .flyover {
   height: 0;
   position: absolute;
-  background-color: $gray-012;
   width: 100%;
   height: 33%;
   transition: transform 0.25s;
@@ -256,12 +258,15 @@ body.home,
   display: block;
   height: 33%;
   transform: translateY(0);
+  color: white;
 }
 
 .home__gift-example .flyover.top {
   top: 0;
   transform-origin: top;
   transform: translateY(-100%);
+  text-align: center;
+  background-color: $gray-012;
 }
 .home__gift-example:hover .flyover.top {
   transform: translateY(0);
@@ -269,10 +274,22 @@ body.home,
 
 .home__gift-example .flyover.bottom {
   bottom: 0;
-  opacity: 0.8;
   transform-origin: bottom;
   transform: translateY(100%);
+  background-color: rgba(161, 172, 178, 0.8)
 }
 .home__gift-example:hover .flyover.bottom {
   transform: translateY(0);
+}
+
+.home__flyover-header {
+  position: relative;
+  top: 66%;
+  text-transform: uppercase;
+}
+
+.home__flyover-description {
+  padding: 8.163265306122%;
+  line-height: 1.25;
+  opacity: 1;
 }
