--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -1,12 +1,15 @@
 .container
   .row
-    .col-xs-10.col-xs-offset-1
-      .hero-overlay
-        %h2.light
-          She’s one-of-a-kind&hellip;
+    .col-xs-12.col-sm-10.col-sm-offset-1
+      .main-header
+        %h1
+          Gift Better.
           %br
-          now her gifts can be as well
-        %p.light We use the science of gifting and gratitude to match her personality, passions and purpose, to gifts she will love, no matter the occasion.
+          Gift Wrapt.
+        %p
+          We use the science of gifting to find the best gifts for you,
+          %br
+          while doing a little good in the world
 
       .hero-overrun
         .sqr-progress
